Incompatible withwith tbb 2021.1.1 #84745

Closed
opened 2021-01-15 11:33:57 +01:00 by Jörg Thalheim · 13 comments

System Information
Operating system: all
Graphics card: all

Blender Version
Broken: 2.91.0 and master
Worked: none

Short description of error

Building blender against tbb 2021.1.1 fails because tbb no longer expose the is_canceling function:

In file included from /tmp/nix-build-blender-2.91.0.drv-0/blender-2.91.0/intern/cycles/util/util_task.cpp:17:
In file included from /tmp/nix-build-blender-2.91.0.drv-0/blender-2.91.0/intern/cycles/util/../util/util_task.h:22:
/tmp/nix-build-blender-2.91.0.drv-0/blender-2.91.0/intern/cycles/util/../util/util_tbb.h:39:14: error: no member named 'self' in namespace 'tbb::v1::task'
  tbb::task::self().cancel_group_execution();
  ~~~~~~~~~~~^
/tmp/nix-build-blender-2.91.0.drv-0/blender-2.91.0/intern/cycles/util/util_task.cpp:65:20: error: no member named 'is_canceling' in 'tbb::detail::d1::task_group'
  return tbb_group.is_canceling();
         ~~~~~~~~~ ^
2 errors generated.
make[2]: *** [intern/cycles/util/CMakeFiles/cycles_util.dir/build.make:238: intern/cycles/util/CMakeFiles/cycles_util.dir/util_task.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:3722: intern/cycles/util/CMakeFiles/cycles_util.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
**System Information** Operating system: all Graphics card: all **Blender Version** Broken: 2.91.0 and master Worked: none **Short description of error** Building blender against tbb 2021.1.1 fails because tbb no longer expose the is_canceling function: ``` In file included from /tmp/nix-build-blender-2.91.0.drv-0/blender-2.91.0/intern/cycles/util/util_task.cpp:17: In file included from /tmp/nix-build-blender-2.91.0.drv-0/blender-2.91.0/intern/cycles/util/../util/util_task.h:22: /tmp/nix-build-blender-2.91.0.drv-0/blender-2.91.0/intern/cycles/util/../util/util_tbb.h:39:14: error: no member named 'self' in namespace 'tbb::v1::task' tbb::task::self().cancel_group_execution(); ~~~~~~~~~~~^ /tmp/nix-build-blender-2.91.0.drv-0/blender-2.91.0/intern/cycles/util/util_task.cpp:65:20: error: no member named 'is_canceling' in 'tbb::detail::d1::task_group' return tbb_group.is_canceling(); ~~~~~~~~~ ^ 2 errors generated. make[2]: *** [intern/cycles/util/CMakeFiles/cycles_util.dir/build.make:238: intern/cycles/util/CMakeFiles/cycles_util.dir/util_task.cpp.o] Error 1 make[1]: *** [CMakeFiles/Makefile2:3722: intern/cycles/util/CMakeFiles/cycles_util.dir/all] Error 2 make[1]: *** Waiting for unfinished jobs.... ```
Author

Added subscriber: @Mic92-3

Added subscriber: @Mic92-3

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'

Thank you for your report. Unfortunately, build issues are off-topic on the bug tracker as explained by the submission form.

What not to report here
For feature requests, feedback, questions or issues building Blender, see communication channels.

Please create a post about this on DevTalk instead.

Thank you for your report. Unfortunately, build issues are off-topic on the bug tracker as explained by the submission form. > **What not to report here** > For feature requests, feedback, questions or issues building Blender, see [communication channels. ](https://wiki.blender.org/wiki/Communication/Contact#User_Feedback_and_Requests) Please create a post about this on [DevTalk ](https://devtalk.blender.org/) instead.

Generally speaking, you have to use versions of the dependencies that are compatible with the Blender version you're building. That newer versions of libraries may have API changes and therefore won't compile with Blender is not unexpected. We provide the required libraries through our SVN .

Generally speaking, you have to use versions of the dependencies that are compatible with the Blender version you're building. That newer versions of libraries may have API changes and therefore won't compile with Blender is not unexpected. We provide the [required libraries through our SVN ](https://wiki.blender.org/wiki/Building_Blender/Linux/Ubuntu#Download_Libraries).
Author

I am a maintainer for nixpkgs and we try to avoid vendoring of dependencies and cannot use pre-compiled binaries (from a technical and a trust perspective). It's unfortunate that upstream don't consider out-dated dependencies a problem and provide no platform to discuss how to solve them.

I am a maintainer for nixpkgs and we try to avoid vendoring of dependencies and cannot use pre-compiled binaries (from a technical and a trust perspective). It's unfortunate that upstream don't consider out-dated dependencies a problem and provide no platform to discuss how to solve them.
Author

Ok. Saw the devtalk hint now. Will go for that.

Ok. Saw the devtalk hint now. Will go for that.

@Mic92-3 Apologies, it was unclear from your report that you are a maintainer for a downstream package. It is understandable that you can't use precompiled binaries in this context. We do provide platforms to discuss issues like this, as I've said in my previous comment. For instance DevTalk should be well suited for this. For direct discussions with other developers you can use the #blender-coders channel on blender.chat .

@Mic92-3 Apologies, it was unclear from your report that you are a maintainer for a downstream package. It is understandable that you can't use precompiled binaries in this context. We do provide platforms to discuss issues like this, as I've said in my previous comment. For instance DevTalk should be well suited for this. For direct discussions with other developers you can use the #blender-coders channel on [blender.chat ](https://blender.chat/home).
Author
Opened up this post: https://devtalk.blender.org/t/incompatible-with-tbb-2021-1-1/17102

@Mic92-3 Thank you.

@Mic92-3 Thank you.

This issue was referenced by 3732508c64

This issue was referenced by 3732508c64ad51c77a6fb83a2444af104d95cfd9

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

This issue was referenced by a1f44e43a2

This issue was referenced by a1f44e43a253eabee74f40315b62cc0c0ff4cb9c
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84745
No description provided.