Fix T84745: build error with TBB 2021

task_group::is_canceling() was removed.